# GSPUI

./: CMakeLists.txt  README.md
include/GSPUI/: GSPUI.h
src/: GSPUI.c
testing/: main.c
